--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  
+  "homepage":"https://sampathkumarj.github.io/growmindz",
   "name": "navg",
   
   "version": "0.1.0",
@@ -54,7 +54,8 @@
     
   "start": "react-scripts start",
   
-    
+  "predeploy":"npm run build",
+  "deploy":"gh-pages -d build",
   "build": "react-scripts build",
   
     
